syntax = "proto3";

package shared.proto.services.v1;

// ============================================================================
// MLSService - MLS-based Group Messaging (RFC 9420 / OpenMLS)
// ============================================================================
//
// Privacy model:
//   Server stores: group_id, current epoch, ENCRYPTED ratchet tree, timestamps
//   Server does NOT store: member identities in plaintext, message content
//   Accepted tradeoff: server knows which device_id is in which group_id
//     (required for routing/auth; device_id is not linked to real identity
//      without cross-referencing auth-service)
//
// Key properties:
//   - Joining requires EXPLICIT cryptographic acceptance (no silent adds)
//   - Former members leave NO trace in group state after leaving
//   - Messages auto-deleted after retention period (default 90 days)
//   - Maximum group size: 2048 members (TreeKEM scales O(log n))
//   - Thread support built into message structure (future UI feature)
//
// Two-step join process (protects against forced membership):
//   1. Admin: ConsumeKeyPackage → InviteToGroup (sends encrypted Welcome)
//   2. Invitee: AcceptGroupInvite (signs explicit consent proof)
//   Without step 2, user is NOT a member - cryptographically provable.
//
// ============================================================================

service MLSService {
  // =========================================================================
  // Group Lifecycle
  // =========================================================================

  // CreateGroup - Initialize new MLS group
  // Creator becomes initial admin. Initial ratchet tree contains only creator.
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);

  // GetGroupState - Fetch current ratchet tree and epoch
  // Called when: rejoining after offline period, new device sync
  rpc GetGroupState(GetGroupStateRequest) returns (GetGroupStateResponse);

  // DissolveGroup - Permanently delete group and all messages
  // Admin-only. Irreversible. Notifies all members via stream.
  rpc DissolveGroup(DissolveGroupRequest) returns (DissolveGroupResponse);

  // =========================================================================
  // Membership Management (Two-Step: Invite → Explicit Accept)
  // =========================================================================

  // InviteToGroup - Admin sends encrypted Welcome to invitee
  // Admin must first call ConsumeKeyPackage to get invitee's KeyPackage.
  // Invitee receives invite via GetPendingInvites or stream notification.
  rpc InviteToGroup(InviteToGroupRequest) returns (InviteToGroupResponse);

  // AcceptGroupInvite - Invitee explicitly accepts invitation with proof
  // Requires Ed25519 signature over acceptance challenge (consent proof).
  // This is the ONLY way to join - no silent adds possible.
  rpc AcceptGroupInvite(AcceptGroupInviteRequest) returns (AcceptGroupInviteResponse);

  // DeclineGroupInvite - Invitee declines. Invite deleted, no trace kept.
  rpc DeclineGroupInvite(DeclineGroupInviteRequest) returns (DeclineGroupInviteResponse);

  // GetPendingInvites - Fetch pending invitations for current device
  rpc GetPendingInvites(GetPendingInvitesRequest) returns (GetPendingInvitesResponse);

  // LeaveGroup - Member voluntarily leaves
  // Former member is removed from ratchet tree. No membership history kept.
  // Their messages remain until TTL expiry (local copies at other clients).
  rpc LeaveGroup(LeaveGroupRequest) returns (LeaveGroupResponse);

  // RemoveMember - Admin removes a member
  // Admin-only. MLS Remove Proposal generated by admin.
  rpc RemoveMember(RemoveMemberRequest) returns (RemoveMemberResponse);

  // =========================================================================
  // Admin Management
  // =========================================================================

  // DelegateAdmin - Grant admin or moderator rights to a member
  // Creator admin can always resign but cannot be stripped by others.
  rpc DelegateAdmin(DelegateAdminRequest) returns (DelegateAdminResponse);

  // =========================================================================
  // MLS State Synchronization
  // =========================================================================

  // SubmitCommit - Push new MLS Commit after membership/key change
  // Updates the server's copy of the ratchet tree.
  // Server validates epoch continuity (prevents replay).
  rpc SubmitCommit(SubmitCommitRequest) returns (SubmitCommitResponse);

  // FetchCommits - Pull pending Commits since last known epoch
  // Called when: coming back online, epoch out of sync
  rpc FetchCommits(FetchCommitsRequest) returns (stream CommitEnvelope);

  // =========================================================================
  // Group Messaging
  // =========================================================================

  // SendGroupMessage - Send encrypted MLS ApplicationMessage
  // Content is fully E2EE. Server stores opaque ciphertext.
  rpc SendGroupMessage(SendGroupMessageRequest) returns (SendGroupMessageResponse);

  // FetchGroupMessages - Pull messages since cursor (catch-up after offline)
  rpc FetchGroupMessages(FetchGroupMessagesRequest) returns (stream GroupMessageEnvelope);

  // MessageStream - Real-time bidirectional stream for active group sessions
  rpc MessageStream(stream GroupStreamRequest) returns (stream GroupStreamResponse);

  // =========================================================================
  // MLS KeyPackage Management
  // =========================================================================

  // PublishKeyPackage - Upload MLS KeyPackages so others can invite you
  // KeyPackages are single-use (consumed on invite, like one-time pre-keys).
  // Publish multiple for availability. Recommended: keep 20+ on server.
  rpc PublishKeyPackage(PublishKeyPackageRequest) returns (PublishKeyPackageResponse);

  // ConsumeKeyPackage - Fetch one KeyPackage to invite a user to a group
  // Admin calls this before InviteToGroup to construct the Welcome message.
  // Consumed atomically - cannot be used twice.
  rpc ConsumeKeyPackage(ConsumeKeyPackageRequest) returns (ConsumeKeyPackageResponse);

  // GetKeyPackageCount - Check how many KeyPackages a user has published
  // Used to determine if user can be invited / needs to refresh packages.
  rpc GetKeyPackageCount(GetKeyPackageCountRequest) returns (GetKeyPackageCountResponse);
}

// ============================================================================
// Group Lifecycle
// ============================================================================

message CreateGroupRequest {
  // Client-generated group ID (UUID v4)
  string group_id = 1;

  // Initial MLS ratchet tree (creator as sole leaf node)
  bytes initial_ratchet_tree = 2;

  // Encrypted group context: name, description, avatar hash
  // Encrypted with initial group epoch secret. Only readable by members.
  bytes encrypted_group_context = 3;

  // Maximum number of members (1-2048)
  uint32 max_members = 4;

  // Message retention in days (default: 90, max: 365)
  // Messages older than this are permanently deleted server-side.
  uint32 message_retention_days = 5;

  // Enable thread/topic support (future UI feature)
  bool threads_enabled = 6;

  reserved 7 to 20;
}

message CreateGroupResponse {
  string group_id = 1;

  // Initial epoch is always 0
  uint64 epoch = 2;

  int64 created_at = 3;
}

message GetGroupStateRequest {
  string group_id = 1;

  // If provided, server returns only commits since this epoch
  optional uint64 known_epoch = 2;
}

message GetGroupStateResponse {
  uint64 epoch = 1;

  // Full ratchet tree blob (if no known_epoch or epoch too stale)
  optional bytes ratchet_tree = 2;

  // Commits since known_epoch (if known_epoch is recent enough)
  repeated CommitEnvelope pending_commits = 3;

  GroupSettings settings = 4;
}

message GroupSettings {
  uint32 max_members = 1;

  // Current member count (number of devices in group)
  uint32 member_count = 2;

  uint32 message_retention_days = 3;

  bool threads_enabled = 4;

  int64 created_at = 5;

  // Messages older than this have been deleted server-side
  int64 messages_deleted_before = 6;
}

message DissolveGroupRequest {
  string group_id = 1;

  // Ed25519 signature over "CONSTRUCT_DISSOLVE_GROUP:{group_id}:{timestamp}"
  bytes admin_proof = 2;

  int64 signature_timestamp = 3;
}

message DissolveGroupResponse {
  bool success = 1;
  int64 dissolved_at = 2;
}

// ============================================================================
// Membership Management
// ============================================================================

message InviteToGroupRequest {
  string group_id = 1;

  // MLS Welcome message encrypted for the invitee using their KeyPackage
  bytes mls_welcome = 2;

  // Reference to the KeyPackage that was consumed (for server-side validation)
  bytes key_package_ref = 3;

  // Epoch at time of invite creation
  uint64 epoch = 4;

  // Invite expiry in seconds from now (max: 604800 = 7 days)
  uint32 expires_in_seconds = 5;

  reserved 6 to 15;
}

message InviteToGroupResponse {
  // Server-assigned invite ID
  string invite_id = 1;

  int64 expires_at = 2;
}

message AcceptGroupInviteRequest {
  string group_id = 1;
  string invite_id = 2;

  // Explicit consent proof: Ed25519 signature over
  // "CONSTRUCT_GROUP_JOIN:{group_id}:{invite_id}:{timestamp}"
  // Signed with user's identity key. Cryptographically proves voluntary join.
  bytes acceptance_signature = 3;

  int64 signature_timestamp = 4;

  // MLS Commit to add self to the ratchet tree
  // Generated by client after processing the Welcome message locally
  bytes mls_commit = 5;

  // Updated ratchet tree after self-add
  bytes new_ratchet_tree = 6;

  reserved 7 to 15;
}

message AcceptGroupInviteResponse {
  bool success = 1;

  // New epoch after join commit
  uint64 new_epoch = 2;

  int64 joined_at = 3;
}

message DeclineGroupInviteRequest {
  string group_id = 1;
  string invite_id = 2;
}

message DeclineGroupInviteResponse {
  bool success = 1;
}

message GetPendingInvitesRequest {
  string device_id = 1;
  optional string cursor = 2;
  uint32 limit = 3;
}

message GetPendingInvitesResponse {
  repeated PendingGroupInvite invites = 1;
  optional string next_cursor = 2;
}

message PendingGroupInvite {
  string invite_id = 1;
  string group_id = 2;

  // Encrypted Welcome message - client processes this to join the group
  bytes mls_welcome = 3;

  int64 expires_at = 4;
  int64 invited_at = 5;

  reserved 6 to 15;
}

message LeaveGroupRequest {
  string group_id = 1;

  // MLS Remove Proposal for self, generated by leaving member
  bytes mls_remove_proposal = 2;
}

message LeaveGroupResponse {
  bool success = 1;
  int64 left_at = 2;
}

message RemoveMemberRequest {
  string group_id = 1;

  // Device ID to remove
  string target_device_id = 2;

  // MLS Remove Proposal generated by admin
  bytes mls_remove_proposal = 3;

  // Admin proof: Ed25519 sig over "CONSTRUCT_REMOVE_MEMBER:{group_id}:{target_device_id}:{timestamp}"
  bytes admin_proof = 4;

  int64 signature_timestamp = 5;

  // Optional reason, encrypted with group epoch key (admin audit only)
  optional bytes encrypted_reason = 6;

  reserved 7 to 15;
}

message RemoveMemberResponse {
  bool success = 1;
  uint64 new_epoch = 2;
  int64 removed_at = 3;
}

// ============================================================================
// Admin Management
// ============================================================================

message DelegateAdminRequest {
  string group_id = 1;

  // Device ID receiving admin rights
  string target_device_id = 2;

  AdminRole role = 3;

  // Proof of current admin rights
  bytes admin_proof = 4;

  int64 signature_timestamp = 5;

  // Admin capabilities token, encrypted with target's identity key
  bytes encrypted_admin_token = 6;
}

enum AdminRole {
  ADMIN_ROLE_UNSPECIFIED = 0;

  // Full admin: invite, remove, delegate, dissolve
  ADMIN_ROLE_FULL = 1;

  // Moderator: remove members only, cannot invite or delegate
  ADMIN_ROLE_MODERATOR = 2;

  reserved 3 to 10;
}

message DelegateAdminResponse {
  bool success = 1;
  int64 delegated_at = 2;
}

// ============================================================================
// MLS State Synchronization
// ============================================================================

message SubmitCommitRequest {
  string group_id = 1;

  // Epoch before this commit
  uint64 epoch = 2;

  // MLS Commit message
  bytes mls_commit = 3;

  // Welcome deliveries for newly added members (if commit adds members)
  repeated WelcomeDelivery welcome_deliveries = 4;

  // Updated ratchet tree after applying this commit
  bytes new_ratchet_tree = 5;

  reserved 6 to 15;
}

message WelcomeDelivery {
  // Device ID to deliver Welcome to
  string device_id = 1;

  // KeyPackage ref used for this member (for server-side validation)
  bytes key_package_ref = 2;
}

message SubmitCommitResponse {
  bool success = 1;
  uint64 new_epoch = 2;
  int64 committed_at = 3;
}

message FetchCommitsRequest {
  string group_id = 1;
  uint64 since_epoch = 2;
}

message CommitEnvelope {
  string group_id = 1;
  uint64 epoch_from = 2;
  uint64 epoch_to = 3;

  bytes mls_commit = 4;

  // Updated ratchet tree after this commit
  bytes ratchet_tree = 5;

  // Welcome message for THIS device (populated if this device was added)
  optional bytes mls_welcome = 6;

  int64 committed_at = 7;

  reserved 8 to 15;
}

// ============================================================================
// Group Messaging
// ============================================================================

message SendGroupMessageRequest {
  string group_id = 1;

  // MLS ApplicationMessage - fully E2EE, server stores opaque ciphertext
  bytes mls_ciphertext = 2;

  // Current epoch (server rejects if epoch mismatch)
  uint64 epoch = 3;

  // Client-generated ID for deduplication
  string client_message_id = 4;

  // Thread ID: client generates UUID for first message in a thread.
  // Replies reference the same thread_id. Feature gated by threads_enabled.
  optional string thread_id = 5;

  reserved 6 to 15;
}

message SendGroupMessageResponse {
  // Server-assigned message ID
  string message_id = 1;

  int64 sent_at = 2;

  // Monotonically increasing sequence number within group
  uint64 sequence_number = 3;

  // Auto-delete scheduled for
  int64 expires_at = 4;
}

message FetchGroupMessagesRequest {
  string group_id = 1;

  // Pagination: fetch messages after this sequence number
  optional uint64 after_sequence = 2;

  uint32 limit = 3;

  // Filter by thread (future use)
  optional string thread_id = 4;
}

message GroupMessageEnvelope {
  string message_id = 1;
  string group_id = 2;

  // MLS epoch when message was sent (for key ratcheting)
  uint64 epoch = 3;

  // MLS ApplicationMessage - server cannot read this
  bytes mls_ciphertext = 4;

  int64 sent_at = 5;
  uint64 sequence_number = 6;

  // Thread ID if message is part of a thread
  optional string thread_id = 7;

  // When this message will be permanently deleted server-side
  int64 expires_at = 8;

  reserved 9 to 15;
}

// ============================================================================
// Real-Time Streaming
// ============================================================================

message GroupStreamRequest {
  oneof request {
    GroupSubscribeRequest subscribe = 1;
    SendGroupMessageRequest send = 2;
    GroupHeartbeat heartbeat = 3;
  }

  string request_id = 10;
  reserved 4 to 9, 11 to 20;
}

message GroupStreamResponse {
  oneof response {
    // Incoming group message
    GroupMessageEnvelope message = 1;

    // New MLS commit (membership or key change)
    CommitEnvelope commit = 2;

    // Acknowledgment of sent message
    GroupMessageAck ack = 3;

    // Stream-level error
    GroupStreamError error = 4;

    GroupHeartbeatAck heartbeat_ack = 5;

    // New invite notification
    PendingGroupInvite invite = 6;

    // Group dissolved by admin
    GroupDissolvedNotice dissolved = 7;
  }

  optional string response_id = 10;
  reserved 8 to 9, 11 to 20;
}

message GroupSubscribeRequest {
  repeated string group_ids = 1;
}

message GroupHeartbeat {
  int64 timestamp = 1;
}

message GroupHeartbeatAck {
  int64 timestamp = 1;
  int64 server_timestamp = 2;
}

message GroupMessageAck {
  string client_message_id = 1;
  string server_message_id = 2;
  uint64 sequence_number = 3;
  int64 server_timestamp = 4;
}

message GroupStreamError {
  string request_id = 1;
  GroupErrorCode error_code = 2;
  string error_message = 3;
  bool retryable = 4;
}

message GroupDissolvedNotice {
  string group_id = 1;
  int64 dissolved_at = 2;
}

enum GroupErrorCode {
  GROUP_ERROR_CODE_UNSPECIFIED = 0;

  // Caller is not a member of this group
  GROUP_ERROR_CODE_NOT_MEMBER = 1;

  // Epoch mismatch: client needs to sync via FetchCommits
  GROUP_ERROR_CODE_EPOCH_MISMATCH = 2;

  // Group has reached max_members (2048)
  GROUP_ERROR_CODE_GROUP_FULL = 3;

  // Group no longer exists (dissolved)
  GROUP_ERROR_CODE_DISSOLVED = 4;

  // Rate limit exceeded
  GROUP_ERROR_CODE_RATE_LIMIT = 5;

  // Admin rights required for this operation
  GROUP_ERROR_CODE_NOT_ADMIN = 6;

  // Invite not found or expired
  GROUP_ERROR_CODE_INVITE_EXPIRED = 7;

  // KeyPackage unavailable for target user
  GROUP_ERROR_CODE_NO_KEY_PACKAGE = 8;

  reserved 9 to 20;
}

// ============================================================================
// MLS KeyPackage Management
// ============================================================================

message PublishKeyPackageRequest {
  string device_id = 1;

  // MLS KeyPackages (opaque blobs per RFC 9420)
  // Each is single-use. Recommend publishing 20+ for availability.
  repeated bytes key_packages = 2;

  reserved 3 to 10;
}

message PublishKeyPackageResponse {
  // Total KeyPackages now available for this device
  uint32 count = 1;

  int64 published_at = 2;
}

message ConsumeKeyPackageRequest {
  // User ID to invite
  string user_id = 1;

  // Prefer a specific device (optional)
  optional string preferred_device_id = 2;
}

message ConsumeKeyPackageResponse {
  // KeyPackage blob - use this to construct MLS Welcome
  bytes key_package = 1;

  // Which device this KeyPackage belongs to
  string device_id = 2;

  // Opaque reference included in InviteToGroupRequest and Welcome Commit
  bytes key_package_ref = 3;
}

message GetKeyPackageCountRequest {
  string user_id = 1;
  optional string device_id = 2;
}

message GetKeyPackageCountResponse {
  // Available KeyPackages for this user (all devices)
  uint32 count = 1;

  // Client should publish more if count falls below this
  uint32 recommended_minimum = 2;

  int64 last_published_at = 3;

  // True if user has zero KeyPackages (cannot be invited to any group)
  bool cannot_be_invited = 4;
}
